[gd_scene load_steps=9 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://timeleft.gd" type="Script" id=3]
[ext_resource path="res://528862__eponn__beep-4.wav" type="AudioStream" id=4]
[ext_resource path="res://label_timer.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.384314, 0.458824, 0.32549, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.380392, 0.466667, 0.352941, 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Node"]
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/selection_color = Color( 0, 0, 0, 0.294118 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/number_color = Color( 1, 1, 1, 1 )
custom_colors/current_line_color = Color( 0, 0, 0, 0.145098 )
custom_colors/executing_line_color = Color( 0, 0, 0, 1 )
custom_colors/word_highlighted_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "[] "
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
highlight_all_occurrences = true
context_menu_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_left = -308.301
margin_top = 53.1778
margin_right = -76.3007
margin_bottom = 194.178
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/CenterContainer"]
margin_left = 16.0
margin_top = 28.0
margin_right = 216.0
margin_bottom = 112.0
rect_min_size = Vector2( 200, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="WindowDialog/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 39.0
margin_bottom = 14.0
text = "TIMER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="WindowDialog/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 43.0
margin_bottom = 14.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="WindowDialog/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
text = "MINS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="WindowDialog/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 60.0
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="WindowDialog/CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 200.0
margin_bottom = 84.0
text = "Start"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
dialog_text = "Timer Completed"

[node name="label_timer" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -23.0
custom_fonts/font = SubResource( 3 )
text = "01:9000"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="tree_exiting" from="." to="." method="_on_Control_tree_exiting"]
[connection signal="text_entered" from="WindowDialog/CenterContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="WindowDialog/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="label_timer" to="label_timer" method="_on_label_timer_mouse_entered"]
[connection signal="mouse_exited" from="label_timer" to="label_timer" method="_on_label_timer_mouse_exited"]
